--- a/src/main-dark.css
+++ b/src/main-dark.css
@@ -191,6 +191,7 @@ a:link {
     align-items: center;
     vertical-align: middle;
     font-family: Roboto;
+    /* height: calc(100% - 40px); */
 }
 .fs_rc_menu_parent {
     position: absolute;
@@ -289,4 +290,22 @@ a:link {
 }
 .bitmap_builder_button:hover{
     background: lightgrey;
+}
+
+#myProgress {
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.521);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 60%;
+    background-color: grey;
+    z-index: 1000000000;
+    display: none;
+}
+
+#myBar {
+    width: 1%;
+    height: 30px;
+    background-color: green;
 }
