Add version number based on date in top left of page and do not override editor background colors

--- a/css/light/editor-light.css
+++ b/css/light/editor-light.css
@@ -1,6 +1,6 @@
 .editor{
     /* Matches terminal ace theme */
-    background-color: white;
+    background-color: none;
     display: flex;
     width: 100%;
     /* height: calc(100% - 60px); */
