--- a/testing/css/dark/editor-dark.css
+++ b/testing/css/dark/editor-dark.css
@@ -1,6 +1,6 @@
 .editor{
     /* Matches terminal ace theme */
-    background-color: black;
+    background-color: none;
     display: flex;
     width: 100%;
     /* height: calc(100% - 60px); */
@@ -9,7 +9,7 @@
 .editor_header_toolbar {
     background-color:black;
     display:flex;
-    align-items:center;
+    align-items: center;
     width:100%;
     height:20px;
     border: gray 1px solid;
