--- a/testing/css/light/emulator-light.css
+++ b/testing/css/light/emulator-light.css
@@ -163,6 +163,16 @@
 
 .emulator_screenshot_btn{
     position: absolute;
+    width: 50px;
+    border-radius: 50%;
+    aspect-ratio: 1/1;
+    top: 70px;
+    left: 10px;
+}
+
+.emulator_screenshot_scale_btn{
+    position: absolute;
+    width: 50px;
     border-radius: 50%;
     aspect-ratio: 1/1;
     top: 10px;
