--- a/testing/css/dark/arcade.css
+++ b/testing/css/dark/arcade.css
@@ -20,7 +20,7 @@
 }
 
 .arcade_scroll_area{
-    background-color: rgb(0, 0, 0, 0.85);
+    background-color: rgba(46, 46, 46, 1.0);
     width: 100%;
     height: 100%;
     overflow-y: scroll;
@@ -33,11 +33,45 @@
 
 .arcade_game{
     position: relative;
-    background-color: mediumseagreen;
+    background-color: rgba(0, 0, 0, 0);
     border: gray;
     width: 90%;
     aspect-ratio: 1/0.5555556;
     margin: auto;
     margin-bottom: 10%;
     transform: translate(0, 10%);
+    background-image: none;
+    background-size: contain;
+}
+
+.arcade_game_transition_parent{
+    background-color: rgba(0, 0, 0, 0);
+    color: white;
+    display: flex;
+    flex-flow: column;
+}
+
+.arcade_game_text_scroll_parent{
+    background-color: rgb(22, 22, 22);
+    height: 83%;
+    width: 100%;
+    overflow-y: auto;
+    outline: gray solid 1px;
+    border-top: gray solid 1px;
+}
+
+.arcade_game_text_scroll_area{
+    background-color: transparent;
+    height: auto;
+    width: 90%;
+    font-family: Roboto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2.5%;
+}
+
+.arcade_game_button_area{
+    background-color: lightseagreen;
+    width: 100%;
+    height: 17%;
 }
