--- a/testing/css/light/emulator-light.css
+++ b/testing/css/light/emulator-light.css
@@ -8,7 +8,7 @@
 }
 
 .emulator_body{
-    background-color: rgb(117, 117, 117);
+    background-color: rgb(122, 122, 122);
     display: grid;
     height: calc(100% - 25px);
     width: 100%;
@@ -34,6 +34,8 @@
     position: relative;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 25px;
+    margin-bottom: 25px;
     width: 225px;
     aspect-ratio: 1/1;
     background-color: rgb(58, 58, 58);
@@ -56,7 +58,7 @@
     image-rendering: -o-crisp-edges;
     image-rendering: pixelated;
     -ms-interpolation-mode: nearest-neighbor;
-    transform-origin: top left;
+    transform-origin: center;
 }
 
 
@@ -166,15 +168,24 @@
     width: 50px;
     border-radius: 50%;
     aspect-ratio: 1/1;
-    top: 70px;
+    top: 10px;
     left: 10px;
 }
 
-.emulator_screenshot_scale_btn{
+.emulator_record_toggle_btn{
     position: absolute;
     width: 50px;
     border-radius: 50%;
     aspect-ratio: 1/1;
-    top: 10px;
+    top: 70px;
+    left: 10px;
+}
+
+.emulator_resolution_display{
+    position: absolute;
+    width: 50px;
+    border-radius: 50%;
+    aspect-ratio: 1/1;
+    bottom: 38px;
     left: 10px;
 }
