--- a/testing/css/dark/emulator-dark.css
+++ b/testing/css/dark/emulator-dark.css
@@ -65,6 +65,7 @@
 .emulator_dpad_up_btn{
     display: block;
     position: absolute;
+    background-size: contain;
     width: 10%;
     aspect-ratio: 1 / 0.8;
     background-color: transparent;
@@ -77,6 +78,7 @@
 .emulator_dpad_left_btn{
     display: block;
     position: absolute;
+    background-size: contain;
     width: 10%;
     aspect-ratio: 1 / 1;
     background-color: transparent;
@@ -89,6 +91,7 @@
 .emulator_dpad_down_btn{
     display: block;
     position: absolute;
+    background-size: contain;
     width: 10%;
     aspect-ratio: 1 / 0.8;
     background-color: transparent;
@@ -101,6 +104,7 @@
 .emulator_dpad_right_btn{
     display: block;
     position: absolute;
+    background-size: contain;
     width: 10%;
     aspect-ratio: 1 / 1;
     background-color: transparent;
@@ -114,6 +118,7 @@
     border-radius: 50%;
     display: block;
     position: absolute;
+    background-size: contain;
     width: 10%;
     aspect-ratio: 1 / 1;
     background-color: transparent;
@@ -127,6 +132,7 @@
     border-radius: 50%;
     display: block;
     position: absolute;
+    background-size: contain;
     width: 10%;
     aspect-ratio: 1 / 1;
     background-color: transparent;
@@ -138,6 +144,7 @@
 
 .emulator_dpad_img{
     position: absolute;
+    background-size: contain;
     aspect-ratio: 1 / 1;
     width: 22.25%;
     top: 52.6%;
@@ -147,6 +154,7 @@
 
 .emulator_b_img{
     position: absolute;
+    background-size: contain;
     aspect-ratio: 1 / 1;
     width: 10.25%;
     top: 61.0%;
@@ -156,6 +164,7 @@
 
 .emulator_a_img{
     position: absolute;
+    background-size: contain;
     aspect-ratio: 1 / 1;
     width: 10.25%;
     top: 54.325%;
@@ -165,6 +174,7 @@
 
 .emulator_screenshot_btn{
     position: absolute;
+    background-size: contain;
     width: 50px;
     border-radius: 50%;
     aspect-ratio: 1/1;
@@ -174,6 +184,7 @@
 
 .emulator_record_toggle_btn{
     position: absolute;
+    background-size: contain;
     width: 50px;
     border-radius: 50%;
     aspect-ratio: 1/1;
@@ -183,6 +194,7 @@
 
 .emulator_resolution_display{
     position: absolute;
+    background-size: contain;
     width: 50px;
     border-radius: 50%;
     aspect-ratio: 1/1;
