--- a/css/light/emulator-light.css
+++ b/css/light/emulator-light.css
@@ -8,7 +8,7 @@
 }
 
 .emulator_body{
-    background-color: #333;
+    background-color: rgb(122, 122, 122);
     display: grid;
     height: calc(100% - 25px);
     width: 100%;
@@ -65,7 +65,6 @@
 .emulator_dpad_up_btn{
     display: block;
     position: absolute;
-    background-size: contain;
     width: 10%;
     aspect-ratio: 1 / 0.8;
     background-color: transparent;
@@ -78,7 +77,6 @@
 .emulator_dpad_left_btn{
     display: block;
     position: absolute;
-    background-size: contain;
     width: 10%;
     aspect-ratio: 1 / 1;
     background-color: transparent;
@@ -91,7 +89,6 @@
 .emulator_dpad_down_btn{
     display: block;
     position: absolute;
-    background-size: contain;
     width: 10%;
     aspect-ratio: 1 / 0.8;
     background-color: transparent;
@@ -104,7 +101,6 @@
 .emulator_dpad_right_btn{
     display: block;
     position: absolute;
-    background-size: contain;
     width: 10%;
     aspect-ratio: 1 / 1;
     background-color: transparent;
@@ -118,7 +114,6 @@
     border-radius: 50%;
     display: block;
     position: absolute;
-    background-size: contain;
     width: 10%;
     aspect-ratio: 1 / 1;
     background-color: transparent;
@@ -132,7 +127,6 @@
     border-radius: 50%;
     display: block;
     position: absolute;
-    background-size: contain;
     width: 10%;
     aspect-ratio: 1 / 1;
     background-color: transparent;
@@ -144,7 +138,6 @@
 
 .emulator_dpad_img{
     position: absolute;
-    background-size: contain;
     aspect-ratio: 1 / 1;
     width: 22.25%;
     top: 52.6%;
@@ -154,7 +147,6 @@
 
 .emulator_b_img{
     position: absolute;
-    background-size: contain;
     aspect-ratio: 1 / 1;
     width: 10.25%;
     top: 61.0%;
@@ -164,7 +156,6 @@
 
 .emulator_a_img{
     position: absolute;
-    background-size: contain;
     aspect-ratio: 1 / 1;
     width: 10.25%;
     top: 54.325%;
@@ -174,7 +165,6 @@
 
 .emulator_screenshot_btn{
     position: absolute;
-    background-size: contain;
     width: 50px;
     border-radius: 50%;
     aspect-ratio: 1/1;
@@ -184,7 +174,6 @@
 
 .emulator_record_toggle_btn{
     position: absolute;
-    background-size: contain;
     width: 50px;
     border-radius: 50%;
     aspect-ratio: 1/1;
@@ -194,7 +183,6 @@
 
 .emulator_resolution_display{
     position: absolute;
-    background-size: contain;
     width: 50px;
     border-radius: 50%;
     aspect-ratio: 1/1;
