Revert "testing: update some stuff"
This reverts commit 6d08357c1172219c08cf2ef126ee128c5fc51cc9.

--- a/testing/css/dark/changelog-dark.css
+++ b/testing/css/dark/changelog-dark.css
@@ -14,6 +14,7 @@
     font-family: Roboto;
     font-size: 14px;
     flex-flow: column;
+    overflow: auto;
     justify-content: center;
 }
 
@@ -25,15 +26,13 @@
     margin: 30px;
     width: calc(100% - 60px);
     height: 100%;
-    overflow: auto;
-    border: gray solid 1px;
 }
 
 .changelog_exit_btn{
-    position: absolute;
-    width: 25px;
+    width: 30px;
     aspect-ratio: 1/1;
-    top: 0;
+    top: 5%;
+    right: 5%;
     background-color: black;
     border: transparent;
     border-right: green solid 1px;
