--- a/css/light/editor-light.css
+++ b/css/light/editor-light.css
@@ -14,3 +14,38 @@
     height:20px;
     border: gray 1px solid;
 }
+
+.editor_emulation_zone{
+    width: auto;
+    height: 100%;
+    background-color: transparent;
+    display: flex;
+    flex-flow: row;
+    outline: rgb(172, 172, 172) 1px solid;
+    outline-offset: 0px;
+}
+
+.editor_emulation_zone_name{
+    width: 85px;
+    height: 100%;
+    background-color: rgb(242, 242, 242);
+    font-family: Roboto;
+    font-size: 14px;
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.editor_emulation_zone_checkbox_parent{
+    width: 50px;
+    height: 100%;
+    background-color: rgb(242, 242, 242);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.editor_emulate_checkbox{
+    margin-top: 0.5px;
+}
