--- a/css/light/emulator-light.css
+++ b/css/light/emulator-light.css
@@ -1,14 +1,16 @@
 .emulator_panel{
-    background-color: rgb(58, 58, 58);
+    background-color: rgb(167, 167, 167);
     width: 100%;
     height: 100%;
     display: flex;
     overflow: none;
     flex-flow: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .emulator_body{
-    background-color: rgb(122, 122, 122);
+    background-color: rgb(167, 167, 167);
     display: grid;
     height: calc(100% - 25px);
     width: 100%;
@@ -38,7 +40,7 @@
     margin-bottom: 25px;
     width: 225px;
     aspect-ratio: 1/1;
-    background-color: rgb(58, 58, 58);
+    background-color: rgb(24, 24, 24);
     background: url(../../css/svgs/emulator/Emulator-THUMBY-NOOUTLINE.svg) no-repeat center;
     background-size: contain;
     display: flex;
@@ -52,6 +54,7 @@
     width: 72px;
     height: 40px;
     margin-top: 16.5%;
+    display: none;
     image-rendering: optimizeQuality;
     image-rendering: -moz-crisp-edges;
     image-rendering: -webkit-optimize-contrast;
@@ -65,6 +68,7 @@
 .emulator_dpad_up_btn{
     display: block;
     position: absolute;
+    background-size: contain;
     width: 10%;
     aspect-ratio: 1 / 0.8;
     background-color: transparent;
@@ -77,6 +81,7 @@
 .emulator_dpad_left_btn{
     display: block;
     position: absolute;
+    background-size: contain;
     width: 10%;
     aspect-ratio: 1 / 1;
     background-color: transparent;
@@ -89,6 +94,7 @@
 .emulator_dpad_down_btn{
     display: block;
     position: absolute;
+    background-size: contain;
     width: 10%;
     aspect-ratio: 1 / 0.8;
     background-color: transparent;
@@ -101,6 +107,7 @@
 .emulator_dpad_right_btn{
     display: block;
     position: absolute;
+    background-size: contain;
     width: 10%;
     aspect-ratio: 1 / 1;
     background-color: transparent;
@@ -114,6 +121,7 @@
     border-radius: 50%;
     display: block;
     position: absolute;
+    background-size: contain;
     width: 10%;
     aspect-ratio: 1 / 1;
     background-color: transparent;
@@ -127,6 +135,7 @@
     border-radius: 50%;
     display: block;
     position: absolute;
+    background-size: contain;
     width: 10%;
     aspect-ratio: 1 / 1;
     background-color: transparent;
@@ -138,6 +147,7 @@
 
 .emulator_dpad_img{
     position: absolute;
+    background-size: contain;
     aspect-ratio: 1 / 1;
     width: 22.25%;
     top: 52.6%;
@@ -147,6 +157,7 @@
 
 .emulator_b_img{
     position: absolute;
+    background-size: contain;
     aspect-ratio: 1 / 1;
     width: 10.25%;
     top: 61.0%;
@@ -156,6 +167,7 @@
 
 .emulator_a_img{
     position: absolute;
+    background-size: contain;
     aspect-ratio: 1 / 1;
     width: 10.25%;
     top: 54.325%;
@@ -165,6 +177,7 @@
 
 .emulator_screenshot_btn{
     position: absolute;
+    background-size: contain;
     width: 50px;
     border-radius: 50%;
     aspect-ratio: 1/1;
@@ -174,6 +187,7 @@
 
 .emulator_record_toggle_btn{
     position: absolute;
+    background-size: contain;
     width: 50px;
     border-radius: 50%;
     aspect-ratio: 1/1;
@@ -183,9 +197,66 @@
 
 .emulator_resolution_display{
     position: absolute;
+    background-size: contain;
     width: 50px;
     border-radius: 50%;
     aspect-ratio: 1/1;
     bottom: 38px;
     left: 10px;
+}
+
+.emulator_multiplayer_parent{
+    position: absolute;
+    background-color: rgba(49, 49, 49, 0.975);
+    border: green solid 1px;
+    width: 60%;
+    height: 50%;
+    display: none;
+    flex-flow: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.emulator_multiplayer_title{
+    width: 100%;
+    top: 0;
+    color: white;
+}
+
+.emulator_multiplayer_exit_btn{
+    position: absolute;
+    width: 25px;
+    aspect-ratio: 1/1;
+    top: 0;
+    left: 0;
+    background-color: black;
+    border: transparent;
+    border-right: green solid 1px;
+    border-bottom: green solid 1px;
+    color: white;
+}
+
+.emulator_fs_slide_div{
+    position: absolute;
+    display: none;
+    flex-flow: column;
+    right: 8px;
+    width: 250px;
+    height: calc(100% - 27px);
+    z-index: 1010;
+    background-color: rgb(138, 138, 138);
+    border-left: rgb(133, 133, 133) 1px solid;
+    overflow: auto;
+}
+
+.emulator_file_row{
+    background-color: rgb(138, 138, 138);
+    width: auto;
+    height: 25px;
+    border-bottom: rgb(58, 58, 58) 1px solid;
+    color: white;
+    font-family: Roboto;
+    font-size: 14px;
+    white-space: nowrap;
+    margin: 2.5px;
 }
