--- a/css/light/fs-light.css
+++ b/css/light/fs-light.css
@@ -22,7 +22,7 @@
     height: 100%;
     justify-content: center;
     align-items: center;
-    overflow: scroll;
+    overflow: auto;
 }
 
 .fs_dropdown {
