--- a/uikit-3.7.3/css/uikit-dark.css
+++ b/uikit-3.7.3/css/uikit-dark.css
@@ -1739,7 +1739,7 @@ select.uk-form-width-xsmall {
 .uk-checkbox:focus {
   background-color: rgba(0, 0, 0, 0);
   outline: none;
-  border-color: #1e87f0;
+  /* border-color: #1e87f0; */
 }
 /*
  * Checked
